# DeepFER

./: .gitignore  .pep8  README.md  bun.lockb  history.csv  index.html  main.py  package.json  pyproject.toml  requirements.txt  tasks_list.md  tsconfig.app.json  tsconfig.app.tsbuildinfo
app/: __init__.py  env.py
app/api/: __init__.py  utils.py
app/api/deepfed/: __init__.py  expression_recognition.py  image_processor.py  process_data.py
app/applications/: __init__.py  history.csv  utils.py
app/applications/deepfed/: expression_recognition.py  process_data.py
app/applications/security/: services.py
app/domain/entities/: user.py
app/infrastructure/fastapi_server/: __init__.py
app/infrastructure/fastapi_server/api/v1/: __init__.py
app/infrastructure/fastapi_server/views/: __init__.py
app/infrastructure/fastapi_server/views/static/css/: styles.css
app/infrastructure/fastapi_server/views/static/js/: interviewer.js  main.js
app/infrastructure/fastapi_server/views/templates/: index.html  interviewer.html
app/views/: __init__.py
app/views/static/css/: styles.css
app/views/static/js/: main.js
app/views/templates/: admin.html  applicant.html  interviewer.html
web/: App.tsx  index.css  main.tsx
web/components/layouts/: index.tsx
web/components/pages/admin/: Dashboard.tsx  Reports.tsx  index.tsx
web/components/pages/auth/: Login.tsx  Signup.tsx
web/components/pages/candidate/: CandidateHome.tsx  Home.tsx  index.tsx
web/components/pages/common/: Interviews.tsx
web/components/providers/: userProvider.tsx
web/domain/types/: User.ts
